@@ -11,7 +11,6 @@
         <include>*.txt</include>
         <include>*.bat</include>
         <include>*.sh</include>
-        <include>*_datatypes.xml</include>
       </includes>
     </fileSet>
     <fileSet>
