@@ -1,3 +1,4 @@
+
  
      Release Notes for MogwaiERDesignerNG
      
@@ -30,6 +31,7 @@ Release 1.0.1
 Release 1.0.2
 
 * First version including the SquirrelSQL plugin ( for Squirrel 2.6.4 )
+* Added SquirrelDialect to interface with the Squirrel DatabaseMedaData API
 * DOT Path ( AT&T Layout library ) is now configurable with preferences dialog
 * Tested reverse engineering with the following databases
-  PostgreSQL Dialect : PostgreSQL 8.2.6
+  PostgreSQL Dialect : PostgreSQL 8.2.6 ( JDBC3 Driver )
